frontend design: scrollbar design fix

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -7,14 +7,15 @@ body {
   padding: 0px;
   box-sizing: border-box;
   background-color: #e9e9ee;
-  overflow-y:scroll;
+  overflow-y: scroll;
 }
 
 ::-webkit-scrollbar {
-    width: 7px;
+  width: 7px;
+  height: 7px;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #7745a5;
-    border-radius: 10px;
+  background: #7745a5;
+  border-radius: 10px;
 }
